force-app/main/default/objects/Opportunity/fields/Amount_with_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Amount_with_Referral_Code__c</fullName>
    <label>Amount with Referral Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>