force-app/main/default/objects/Opportunity/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Paid</label>
    <type>Checkbox</type>
</CustomField>