force-app/main/default/objects/Opportunity/fields/Balance_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid_Amount__c</fullName>
    <label>Balance Paid Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>