force-app/main/default/objects/Opportunity/fields/Balance_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid_Date__c</fullName>
    <label>Balance Paid Date</label>
    <type>DateTime</type>
</CustomField>