force-app/main/default/objects/Opportunity/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>Text(Primary_Contact__r.Birthdate)</formula>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>