force-app/main/default/objects/Opportunity/fields/BN_Survey_Q1__c.field-meta.xml
<CustomField>
    <fullName>BN_Survey_Q1__c</fullName>
    <label>Are you familiar with the SF Platform?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>