force-app/main/default/objects/Opportunity/fields/BN_Survey_Q2__c.field-meta.xml
<CustomField>
    <fullName>BN_Survey_Q2__c</fullName>
    <label>Current PMS you use today?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>