force-app/main/default/objects/Opportunity/fields/BN_Survey_Q3__c.field-meta.xml
<CustomField>
    <fullName>BN_Survey_Q3__c</fullName>
    <label>How many units do you work?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>