force-app/main/default/objects/Opportunity/fields/Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Date__c</fullName>
    <description>No need to set this, it&apos;s only for email integrator to determine when is the email campaign date</description>
    <label>Campaign Date</label>
    <type>Date</type>
</CustomField>