force-app/main/default/objects/Opportunity/fields/Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact 3)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>