force-app/main/default/objects/Opportunity/fields/Contact_4__c.field-meta.xml
<CustomField>
    <fullName>Contact_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact 4)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>