force-app/main/default/objects/Opportunity/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <formula>Primary_Contact__r.MailingCountry</formula>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>