force-app/main/default/objects/Opportunity/fields/Created_by_Email_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Email_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this opportunity created by Email Campaign?</description>
    <label>Created by Email Campaign</label>
    <type>Checkbox</type>
</CustomField>