force-app/main/default/objects/Opportunity/fields/Current_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Current_Software_Used__c</fullName>
    <label>Current Software Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>