force-app/main/default/objects/Opportunity/fields/Deposit_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Due_Amount__c</fullName>
    <formula>MAX(Total_Amount__c * 0.10, 400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>