force-app/main/default/objects/Opportunity/fields/Effectivity_After_a_Year__c.field-meta.xml
<CustomField>
    <fullName>Effectivity_After_a_Year__c</fullName>
    <formula>IF(
AND(
MONTH(Effective_Date__c) = 2,
DAY(Effective_Date__c) = 29
),
DATE(
YEAR(Effective_Date__c)+1,
3,
1),
DATE(
YEAR(Effective_Date__c)+1,
MONTH(Effective_Date__c),
DAY(Effective_Date__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>