force-app/main/default/objects/Opportunity/fields/ESignGenie_FolderId__c.field-meta.xml
<CustomField>
    <fullName>ESignGenie_FolderId__c</fullName>
    <description>Technical field - hold e-Sign Genie&apos;s related folder Id</description>
    <label>ESignGenie FolderId</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>