force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderCreationDate__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderCreationDate__c</fullName>
    <label>Last Folder Creation Date</label>
    <type>DateTime</type>
</CustomField>