force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderDocumentIds__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderDocumentIds__c</fullName>
    <label>Last Folder Document Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>