force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderId__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderId__c</fullName>
    <label>Last Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>