force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderName__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderName__c</fullName>
    <label>Last Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>