force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderSentDate__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderSentDate__c</fullName>
    <label>Last Folder Sent Date</label>
    <type>DateTime</type>
</CustomField>