force-app/main/default/objects/Opportunity/fields/eSignGenieApp__folderStatus__c.field-meta.xml
<CustomField>
    <fullName>eSignGenieApp__folderStatus__c</fullName>
    <label>Last Folder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHARED</fullName>
            </value>
            <value>
                <fullName>PARTIALLY SIGNED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>EXECUTED</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
            </value>
            <value>
                <fullName>DELETED</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>