force-app/main/default/objects/Opportunity/fields/Facebook_Business_Page__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Business_Page__c</fullName>
    <label>Facebook Business Page</label>
    <type>Url</type>
</CustomField>