force-app/main/default/objects/Opportunity/fields/Is_Call_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Call_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Call Done?</label>
    <type>Checkbox</type>
</CustomField>