force-app/main/default/objects/Opportunity/fields/Is_Follow_Up_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Follow_Up_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Follow Up Email Sent?</label>
    <type>Checkbox</type>
</CustomField>