force-app/main/default/objects/Opportunity/fields/Is_Survey_Answered__c.field-meta.xml
<CustomField>
    <fullName>Is_Survey_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Survey Answered?</label>
    <type>Checkbox</type>
</CustomField>