force-app/main/default/objects/Opportunity/fields/Last_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date_Time__c</fullName>
    <label>Last Call Date/ Time</label>
    <type>DateTime</type>
</CustomField>