force-app/main/default/objects/Opportunity/fields/LinkedIN__c.field-meta.xml
<CustomField>
    <fullName>LinkedIN__c</fullName>
    <label>LinkedIN</label>
    <type>Url</type>
</CustomField>