force-app/main/default/objects/Opportunity/fields/Number_of_Units_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Under_Management__c</fullName>
    <label>Number of Units Under Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>