force-app/main/default/objects/Opportunity/fields/One_Time_Payment__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Payment__c</fullName>
    <label>One Time Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>