force-app/main/default/objects/Opportunity/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <formula>&apos;https://bookingninjas-pbo.secure.force.com/PaymentOrder?id=&apos;+ Order_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment URL</label>
    <type>Text</type>
</CustomField>