force-app/main/default/objects/Opportunity/fields/PMS_Text__c.field-meta.xml
<CustomField>
    <fullName>PMS_Text__c</fullName>
    <label>What are you looking to get out of your</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>