force-app/main/default/objects/Opportunity/fields/Preferred_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_Time__c</fullName>
    <label>Preferred Date &amp; Time (EST)</label>
    <type>DateTime</type>
</CustomField>