force-app/main/default/objects/Opportunity/fields/Product_Item_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Item 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product Item 2)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>