force-app/main/default/objects/Opportunity/fields/Product_Item_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Item 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Product Item 3)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>