force-app/main/default/objects/Opportunity/fields/Product_Item_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_3_Name__c</fullName>
    <formula>Product_Item_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Item 3 Name</label>
    <type>Text</type>
</CustomField>