force-app/main/default/objects/Opportunity/fields/Reason_on_why_it_is_not_closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_on_why_it_is_not_closed__c</fullName>
    <label>Reason on why it is not closed?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>