force-app/main/default/objects/Opportunity/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <formula>Effectivity_After_a_Year__c - 65</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date Notification</label>
    <type>Date</type>
</CustomField>