force-app/main/default/objects/Opportunity/fields/Request_Demo_Url__c.field-meta.xml
<CustomField>
    <fullName>Request_Demo_Url__c</fullName>
    <formula>&apos;https://bookingninjas-pbo.secure.force.com/RequestDemoForm?Id=&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Demo Url</label>
    <type>Text</type>
</CustomField>