force-app/main/default/objects/Opportunity/fields/SF_AE__c.field-meta.xml
<CustomField>
    <fullName>SF_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF_AE</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>