force-app/main/default/objects/Opportunity/fields/Signer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Company_Name__c</fullName>
    <label>Signer Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>