force-app/main/default/objects/Opportunity/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <label>Signer Email</label>
    <type>Email</type>
</CustomField>