force-app/main/default/objects/Opportunity/fields/Survey_Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Survey_Form_Url__c</fullName>
    <formula>&apos;https://bookingninjas-pbo.secure.force.com/SurveyForm?Id=&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Form Url</label>
    <type>Text</type>
</CustomField>