force-app/main/default/objects/Opportunity/fields/trialEmail__c.field-meta.xml
<CustomField>
    <fullName>trialEmail__c</fullName>
    <description>It&apos;s for trial/pilot page, should not be manually add value.</description>
    <label>trialEmail</label>
    <type>Email</type>
</CustomField>