force-app/main/default/objects/Opportunity/fields/X2nd_Phone__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Phone__c</fullName>
    <label>2nd Phone</label>
    <type>Phone</type>
</CustomField>