force-app/main/default/objects/Opportunity/fields/X60_days_before_Renewal__c.field-meta.xml
<CustomField>
    <fullName>X60_days_before_Renewal__c</fullName>
    <formula>Effectivity_After_a_Year__c - 60</formula>
    <label>60 days before Renewal</label>
    <type>Date</type>
</CustomField>