force-app/main/default/objects/Opportunity/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <businessProcess>Client</businessProcess>
    <label>Client</label>
</RecordType>