force-app/main/default/objects/Opportunity/recordTypes/Clients.recordType-meta.xml
<RecordType>
    <fullName>Clients</fullName>
    <active>true</active>
    <businessProcess>Client</businessProcess>
    <label>Client</label>
</RecordType>