force-app/main/default/objects/Opportunity/recordTypes/Developer.recordType-meta.xml
<RecordType>
    <fullName>Developer</fullName>
    <active>true</active>
    <businessProcess>Developer Process</businessProcess>
    <label>Developer/Admin/Scrapper</label>
</RecordType>