force-app/main/default/objects/Opportunity/validationRules/Primary_Contact_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Primary_Contact__c)</errorConditionFormula>
    <errorDisplayField>Primary_Contact__c</errorDisplayField>
    <errorMessage>Primary Contact Is Required</errorMessage>
</ValidationRule>