force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Account_Name1__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>Effective_Date__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Created_by_Email_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/5/2021</value>
    </filters>
    <label>All Opportunities</label>
</ListView>