force-app/main/default/objects/Opportunity/listViews/Franks_Opps_view.listView-meta.xml
<ListView>
    <fullName>Franks_Opps_view</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Contact_2__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Contact__c</field>
        <operation>contains</operation>
        <value>Benjamin Rosales</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notContain</operation>
        <value>Check Back Quarterly,Dead Opportunity</value>
    </filters>
    <label>Franks Opps view</label>
</ListView>