force-app/main/default/objects/Opportunity/listViews/Leonardos_opps.listView-meta.xml
<ListView>
    <fullName>Leonardos_opps</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Contact__c</field>
        <operation>contains</operation>
        <value>Leonardo de Paula</value>
    </filters>
    <filters>
        <field>Contact_2__c</field>
        <operation>contains</operation>
        <value>Leonardo de Paula</value>
    </filters>
    <label>Leonardo_De_Paula</label>
</ListView>