force-app/main/default/objects/Opportunity/listViews/MQL_Pending_Demo.listView-meta.xml
<ListView>
    <fullName>MQL_Pending_Demo</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>MQL- Pending Demo</value>
    </filters>
    <label>MQL- Pending Demo</label>
</ListView>