force-app/main/default/objects/Opportunity/listViews/POC_Negotiation.listView-meta.xml
<ListView>
    <fullName>POC_Negotiation</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>POC Negotiation</value>
    </filters>
    <label>POC Negotiation</label>
</ListView>